--- a/app/index.html
+++ b/app/index.html
@@ -42,7 +42,19 @@
     </head>
     <body>
 
-        <div id="app" class="app"></div>
+        <div id="app" class="app">
+            <header id="header" class="ja-main header">
+                <nav id="app-nav" class="js-nav">
+                    <ul class="app-nav__menu">
+                        <li class="app-nav__menu-item"><a href="/">Home</a></li>
+                        <li class="app-nav__menu-item"><a href="/pages/about">About</a></li>
+                        <li class="app-nav__menu-item"><a href="/pages/contact">Contact</a></li>
+                    </ul>
+                </nav>
+            </header>
+            <main id="main" class="js-main main"></main>
+            <footer id="footer" class="js-footer footer"></footer>
+        </div>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
