adds active class to nav menu

--- a/app/index.html
+++ b/app/index.html
@@ -43,13 +43,13 @@
     <body>
 
         <div id="app" class="app">
-            <header id="header" class="ja-main header">
+            <header id="header" class="js-header header">
                 <nav id="app-nav" class="js-nav">
-                    <ul class="app-nav__menu">
+<!--                     <ul class="app-nav__menu">
                         <li class="app-nav__menu-item"><a href="/">Home</a></li>
                         <li class="app-nav__menu-item"><a href="/pages/about">About</a></li>
                         <li class="app-nav__menu-item"><a href="/pages/contact">Contact</a></li>
-                    </ul>
+                    </ul> -->
                 </nav>
             </header>
             <main id="main" class="js-main main"></main>
