--- a/app/index.html
+++ b/app/index.html
@@ -65,8 +65,10 @@
                     <div class="col-md-12">
                         <article class="primary">
                             <h1>Home</h1>
+                            <p>Heirloom banh mi yr tattooed Pitchfork, you probably haven\'t heard of them cronut keytar Shoreditch kogi blog.  Selvage craft beer Helvetica cray cred post-ironic.  Fixie VHS retro, heirloom pork belly Brooklyn Etsy pug whatever.  Scenester aesthetic meditation locavore, Austin +1 ennui ugh wayfarers brunch YOLO next level meh.  Keffiyeh Godard Marfa Austin Tumblr</p>
+                            <p>Heirloom banh mi yr tattooed Pitchfork, you probably haven\'t heard of them cronut keytar Shoreditch kogi blog.  Selvage craft beer Helvetica cray cred post-ironic.  Fixie VHS retro, heirloom pork belly Brooklyn Etsy pug whatever.  Scenester aesthetic meditation locavore, Austin +1 ennui ugh wayfarers brunch YOLO next level meh.  Keffiyeh Godard Marfa Austin Tumblr</p>
                             <div class="parallaxify">
-                                <div id="galaxy" class="galaxy" data-parallaxify-range-x="20" data-parallaxify-range-y="10">
+                                <div id="galaxy" class="galaxy" data-parallaxify-range-x="60" data-parallaxify-range-y="0">
                                     <div id="world" class="world" data-parallaxify-range-x="50" data-parallaxify-range-y="50"></div>
                                 </div>
                             </div>
