--- a/app/pages/about.html
+++ b/app/pages/about.html
@@ -53,7 +53,7 @@
                 </nav>
             </header>
             <main id="main" class="js-main main">
-                <div id="page-about" class="page page--about" style="transform: translateX(-100%);">
+                <div id="page-about" class="page page--about page--is-visible">
                     <div class="container">
                         <div class="row">
                             <div class="col-md-12">
