switches out parallax plugin

--- a/app/index.html
+++ b/app/index.html
@@ -73,11 +73,11 @@
                     </section>
 
                     <div class="parallaxify">
-                        <div class="parallaxify__inner">
-                            <div id="galaxy" class="js-galaxy galaxy" data-parallaxify-range-x="160" data-parallaxify-range-y="50">
+                        <div id="p-scene" class="parallaxify__inner js-parallax">
+                            <div class="layer galaxy" data-depth="0.20">
                                 <img class="galaxy__image" src="assets/images/parallax-bg.jpg" style="margin-top: -2em;" />
                             </div>
-                            <div id="world" class="js-world world" data-parallaxify-range-x="350" data-parallaxify-range-y="350">
+                            <div class="layer world" data-depth="0.40">
                                 <img class="world__image" src="assets/images/parallax-fg.png" />
                             </div>
                         </div><!--/.parallaxify__innner -->
